# server/src/services/recipes/recipeDTO.js
@@ -1,9 +1,10 @@
 
 const recipeToDTO = (recipe) => {
   let averageRating = 0
-  if(recipe.rating.length !== 0) {
-    const sum = recipe.ratings.reduce((total, rating) => total + rating, 0);
-    averageRating = sum / recipe.ratings.length;
+  const rating = recipe.rating
+  if(rating.length !== 0) {
+    const sum = rating.reduce((total, rating) => total + rating.rate, 0);
+    averageRating = sum / rating.length;
   }else {
     averageRating = null
   }
